manifests/argocd-extension/dev-eu-central-1/http-route-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: istio
      namespace: istio-system
      sectionName: https
  hostnames:
    - argocd.dev.eu-central-1.localhost
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
