manifests/argocd-extension/dev-eu-central-1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - argocd-dev.localhost
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
